# Anfaia-Bot-Jobs-AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  main.py
app/agents/: __init__.py  discord_publisher_agent.py  duplicate_detector.py  job_classifier.py  job_collector.py  job_editor.py  json_utils.py  prompts.py
app/api/: __init__.py  dependencies.py  schemas.py
app/api/routes/: discord.py  health.py  jobs.py  stats.py  workflow.py
app/application/: __init__.py  use_cases.py
app/core/: __init__.py  config.py  container.py  logging.py  metrics.py
app/database/: __init__.py  base.py  models.py  repositories.py  session.py
app/domain/: __init__.py  category_colors.py  entities.py  geo.py  value_objects.py
app/infrastructure/: __init__.py
app/infrastructure/discord/: __init__.py  discord_publisher.py  embed_builder.py  null_publisher.py
app/infrastructure/embeddings/: factory.py  hash_embeddings.py  openai_embeddings.py
app/infrastructure/llm/: anthropic_provider.py  factory.py  openai_provider.py
app/infrastructure/persistence/: __init__.py  in_memory.py
app/infrastructure/scheduler/: scheduler.py
app/infrastructure/sources/: __init__.py  arbeitnow_source.py  registry.py  remoteok_source.py  remotive_source.py  rss_source.py  text.py
app/interfaces/: __init__.py  agent.py  embeddings.py  job_source.py  llm.py  publisher.py  repositories.py
app/workflows/: __init__.py  base.py  daily_jobs_workflow.py
docker/: entrypoint.sh
tests/: conftest.py  test_api.py  test_classifier.py  test_collector.py  test_domain.py  test_duplicate_detector.py  test_geo.py  test_json_utils.py  test_sources.py  test_workflow.py
