[project]
name = "anfaia-jobs-ai"
version = "0.1.0"
description = "Sistema autónomo multiagente que busca ofertas de empleo tech/IA y las publica contextualizadas en Discord."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Anfaia" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.2",
    "discord.py>=2.4.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.4",
    "feedparser>=6.0.11",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI usa llamadas en defaults (Depends)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
# Excludes adapters that require external services (network/DB) or that govern
# the process lifecycle; their behavior is validated via real integration.
omit = [
    "app/main.py",
    "app/infrastructure/scheduler/*",
    "app/infrastructure/discord/discord_publisher.py",
    "app/infrastructure/llm/openai_provider.py",
    "app/infrastructure/llm/anthropic_provider.py",
    "app/infrastructure/embeddings/openai_embeddings.py",
    "app/database/session.py",
    "app/database/repositories.py",
    "app/database/models.py",
    "alembic/*",
]
